# nonempty-vector

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  cabal.project  default.nix  nonempty-vector.cabal
.github/workflows/: .haskell-ci.yml.~undo-tree~  haskell-ci.yml  hs-matrix.yml
src/Data/Vector/: .NonEmpty.hs.~undo-tree~  NonEmpty.hs
src/Data/Vector/NonEmpty/: .Internal.hs.~undo-tree~  .Mutable.hs.~undo-tree~  Generic.hs  Internal.hs  Mutable.hs  Primitive.hs  Storable.hs  Unboxed.hs
src/Data/Vector/NonEmpty/Unboxed/: Internal.hs
test/: Main.hs  NEVectorTests.hs  doctests.hs
