cabal-version:       1.24
name:                nonempty-vector
version:             0.2.0.0
synopsis:            Non-empty vectors
description:
  Performant non-empty mutable and immutable vectors. These vectors strive to implement
  the common APIs seen in `vector` without any additional performance cost.
homepage:            https://github.com/emilypi/nonempty-vector
bug-reports:         https://github.com/emilypi/nonempty-vector/issues
license:             BSD3
license-file:        LICENSE
author:              Emily Pillmore
maintainer:          emilypi@cohomolo.gy
copyright:           (c) 2019 Emily Pillmore
category:            Data
build-type:          Custom
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:         GHC ==8.8.1 || ==8.6.5 || ==8.6.3 || ==8.4.4 || ==8.4.3 || ==8.0.2


source-repository head
  type:     git
  location: https://github.com/emilypi/nonempty-vector.git


custom-setup
  setup-depends:
      base           >=4.9 && <5
    , Cabal
    , cabal-doctest


library
  exposed-modules:     Data.Vector.NonEmpty
                     , Data.Vector.NonEmpty.Mutable

  build-depends:       base        >=4.9  && <5
                     , deepseq
                     , primitive   >=0.6  && <0.8
                     , semigroups  >=0.17 && <0.20
                     , vector      >=0.12 && <0.13

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


test-suite doctests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs

  build-depends:       base            >=4.9  && <5
                     , doctest

  hs-source-dirs:      test
  ghc-options:         -Wall -threaded
  x-doctest-options:   --fast
