cabal-version:   3.0
name:            nonempty-vector
version:         0.2.3
synopsis:        Non-empty vectors
description:     Performant, non-empty mutable and immutable vectors
homepage:        https://github.com/emilypi/nonempty-vector
bug-reports:     https://github.com/emilypi/nonempty-vector/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Emily Pillmore
maintainer:      emilypi@cohomolo.gy
copyright:       (c) 2019-2023 Emily Pillmore <emilypi@cohomolo.gy>
category:        Data
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.10.7
   || ==9.0.2
   || ==9.2.6
   || ==9.4.4
   || ==9.6.3
   || ==9.8.1

source-repository head
  type:     git
  location: https://github.com/emilypi/nonempty-vector.git

library
  exposed-modules:
    Data.Vector.NonEmpty
    Data.Vector.NonEmpty.Internal
    Data.Vector.NonEmpty.Mutable

  build-depends:
      base       >=4.14  && <4.20
    , deepseq
    , primitive  >=0.6  && <0.9
    , vector     >=0.12 && <0.14

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite tasty
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  build-depends:
      base     >=4.14 && <4.20
    , nonempty-vector
    , QuickCheck
    , tasty
    , tasty-quickcheck
    , vector

  hs-source-dirs:    test
  ghc-options:       -Wall -threaded
